--- a/pages/11382.html
+++ b/pages/11382.html
@@ -1094,7 +1094,9 @@ margin-left: 0em;
 
 <p>At the end of the 20th century, there had accumulated excellent but indirect evidence for gravitational waves from the observation of <a class='existingWikiWord' href='/nlab/show/binary+pulsar'>binary pulsars</a> (<a href='#HulseTaylor75'>Hulse-Taylor 75</a>). Their observed rotational motion loses energy precisely to the extent that <a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a> predicts is being radiated away by gravitational waves.</p>
 
-<p>On 11 Febrary 2016 was the announcement of the first direct detection by the <a class='existingWikiWord' href='/nlab/show/LIGO'>LIGO</a> collaboration, using laser interferometry, of a gravitational wave signal coming from the in-spiral and merge of a pair of <a class='existingWikiWord' href='/nlab/show/black+hole'>black holes</a> (<a href='#LIGO16'>LIGO 2016</a>). The signal was a chirp at 35-250 Hz (converted to audio in <a href='https://youtu.be/TWqhUANNFXw'>this looped recording</a>), detected as coming from the sky over the southern hemisphere on 14 September 2015.</p>
+<p>On 11 Febrary 2016 was the announcement of the first direct detection by the <a class='existingWikiWord' href='/nlab/show/LIGO-Virgo'>LIGO</a> collaboration, using laser interferometry, of a gravitational wave signal coming from the in-spiral and merge of a pair of <a class='existingWikiWord' href='/nlab/show/black+hole'>black holes</a> (<a href='#LIGO16'>LIGO 2016</a>). The signal was a chirp at 35-250 Hz (converted to audio in <a href='https://youtu.be/TWqhUANNFXw'>this looped recording</a>), detected as coming from the sky over the southern hemisphere on 14 September 2015.</p>
+
+<p>Further direct detections of gravitational wave events followed. The event GW170817 <a href='LIGOVirgo17'>LIGO-Virgo17</a> showed gravitational waves from merging <a class='existingWikiWord' href='/nlab/show/neutron+star'>neutron stars</a> coincident with the corresponding <a class='existingWikiWord' href='/nlab/show/electromagnetic+radiation'>electromagnetic radiation</a>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -1146,7 +1148,7 @@ margin-left: 0em;
 <li id='HulseTaylor75'>Hulse, Taylor, <em>Discovery of a pulsar in a binary system</em>, The astrophysical journal, 195:L51-53, 1975 (<a href='http://adsabs.harvard.edu/full/1975ApJ...195L..51H'>web</a>)</li>
 </ul>
 
-<p>The first proposal of the <a class='existingWikiWord' href='/nlab/show/LIGO'>LIGO</a>-type experiment for the detection of gravitational waves is due to</p>
+<p>The first proposal of the <a class='existingWikiWord' href='/nlab/show/LIGO-Virgo'>LIGO</a>-type experiment for the detection of gravitational waves is due to</p>
 
 <ul>
 <li>M. Gertsenshtein, I. Postivoit, <em>On the detection of low frequency gravitational waves</em>, Soviet Physics JETP, volume 16, number 2, 1963 (<a href='http://www.jetp.ac.ru/cgi-bin/dn/e_016_02_0433.pdf'>pdf</a>)</li>
@@ -1178,10 +1180,16 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>Direct detection of gravitational waves by the <a class='existingWikiWord' href='/nlab/show/LIGO'>LIGO</a> experiment is reported in</p>
+<p>Direct detection of gravitational waves by the <a class='existingWikiWord' href='/nlab/show/LIGO-Virgo'>LIGO</a> experiment is reported in</p>
 
 <ul>
-<li id='LIGO16'>B. P. Abbott et al. (<a class='existingWikiWord' href='/nlab/show/LIGO'>LIGO</a> Scientific Collaboration and Virgo Collaboration), <em>Observation of Gravitational Waves from a Binary Black Hole Merger</em>, Phys. Rev. Lett. 116, 061102, 11 February 2016, doi:<a href='http://dx.doi.org/10.1103/PhysRevLett.116.061102'>10.1103/PhysRevLett.116.061102</a></li>
+<li id='LIGO16'>
+<p>B. P. Abbott et al. (<a class='existingWikiWord' href='/nlab/show/LIGO-Virgo'>LIGO</a> Scientific Collaboration and <a class='existingWikiWord' href='/nlab/show/LIGO-Virgo'>Virgo</a> Collaboration), <em>Observation of Gravitational Waves from a Binary Black Hole Merger</em>, Phys. Rev. Lett. 116, 061102, 11 February 2016, doi:<a href='http://dx.doi.org/10.1103/PhysRevLett.116.061102'>10.1103/PhysRevLett.116.061102</a></p>
+</li>
+
+<li id='LIGOVirgo17'>
+<p>B. P. Abbott et al. (<a class='existingWikiWord' href='/nlab/show/LIGO-Virgo'>LIGO</a> Scientific Collaboration and <a class='existingWikiWord' href='/nlab/show/LIGO-Virgo'>Virgo</a> Collaboration), <em>GW170817: Observation of Gravitational Waves from a Binary Neutron Star Inspiral</em> Phys. Rev. Lett. 119, 161101, 2017 (<a href='https://doi.org/10.1103/PhysRevLett.119.161101'>doi:10.1103/PhysRevLett.119.161101</a>)</p>
+</li>
 </ul>
 
 <p>Review of the theoretical predictions and their experimental verification is given in</p>
@@ -1204,14 +1212,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October  3, 2017 08:06:26 
+  Revised on October 23, 2017 05:43:34 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (77.56.177.247)
+  (188.109.125.236)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/gravitational+wave" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/gravitational+wave/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/gravitational+wave" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/gravitational+wave" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/gravitational+wave" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/gravitational+wave/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/gravitational+wave" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/gravitational+wave" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
