--- a/pages/10306.html
+++ b/pages/10306.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -903,7 +903,7 @@ margin-left: 0em;
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a></strong></p>
 
-<p><strong><a class='existingWikiWord' href='/nlab/show/force'>force</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge</a> <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a></strong></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/force'>force</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge</a> <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a></strong></p>
 
 <ul>
 <li>
@@ -923,13 +923,13 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p><strong>scalar bosons</strong></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar</a> <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a></strong></p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Higgs+boson'>Higgs boson</a>, <a class='existingWikiWord' href='/nlab/show/cosmic+inflation'>inflaton</a> (<a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar field</a>)</li>
 </ul>
 
-<p><strong><a class='existingWikiWord' href='/nlab/show/matter'>matter</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a></strong> (<a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinors</a>)</p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/matter'>matter</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a></strong> (<a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinors</a>, <a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac fields</a>)</p>
 
 <ul>
 <li>
@@ -943,6 +943,10 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/neutrino'>neutrino</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/muon'>muon</a></p>
+</li>
 </ul>
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/hadron'>hadron</a></strong> (<a class='existingWikiWord' href='/nlab/show/bound+state'>bound states</a> of the above <a class='existingWikiWord' href='/nlab/show/quark'>quarks</a>)</p>
@@ -950,6 +954,10 @@ margin-left: 0em;
 <ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/meson'>meson</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/pion'>pion</a></li>
+</ul>
 </li>
 
 <li>
@@ -975,7 +983,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> - <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> of <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> - <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> of <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> (<a class='existingWikiWord' href='/nlab/show/Rarita-Schwinger+field'>Rarita-Schwinger field</a>)</p>
 </li>
 
 <li>
@@ -1001,15 +1009,27 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Rarita-Schwinger+field'>Rarita-Schwinger field</a></p>
-</li>
-
-<li>
 <p><a class='existingWikiWord' href='/nlab/show/monopole'>monopole</a></p>
 </li>
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/dual+graviton'>dual graviton</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/auxiliary+field'>auxiliary fields</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/ghost+field'>ghost field</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/antifield'>antifield</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/anti-ghost+field'>antighost field</a>, <a class='existingWikiWord' href='/nlab/show/Nakanishi-Lautrup+field'>Nakanishi-Lautrup field</a></p>
 </li>
 </ul>
 </div>
@@ -1024,11 +1044,15 @@ margin-left: 0em;
 
 <h2 id='related_entries'>Related entries</h2>
 
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/neutron+star'>neutron star</a></li>
+</ul>
+
 <p><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a></p>
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a></strong></p>
 
-<p><strong><a class='existingWikiWord' href='/nlab/show/force'>force</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge</a> <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a></strong></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/force'>force</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge</a> <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a></strong></p>
 
 <ul>
 <li>
@@ -1048,13 +1072,13 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p><strong>scalar bosons</strong></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar</a> <a class='existingWikiWord' href='/nlab/show/boson'>bosons</a></strong></p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Higgs+boson'>Higgs boson</a>, <a class='existingWikiWord' href='/nlab/show/cosmic+inflation'>inflaton</a> (<a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar field</a>)</li>
 </ul>
 
-<p><strong><a class='existingWikiWord' href='/nlab/show/matter'>matter</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a></strong> (<a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinors</a>)</p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/matter'>matter</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a></strong> (<a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinors</a>, <a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac fields</a>)</p>
 
 <ul>
 <li>
@@ -1068,6 +1092,10 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/neutrino'>neutrino</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/muon'>muon</a></p>
+</li>
 </ul>
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/hadron'>hadron</a></strong> (<a class='existingWikiWord' href='/nlab/show/bound+state'>bound states</a> of the above <a class='existingWikiWord' href='/nlab/show/quark'>quarks</a>)</p>
@@ -1075,6 +1103,10 @@ margin-left: 0em;
 <ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/meson'>meson</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/pion'>pion</a></li>
+</ul>
 </li>
 
 <li>
@@ -1100,7 +1132,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> - <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> of <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> - <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> of <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> (<a class='existingWikiWord' href='/nlab/show/Rarita-Schwinger+field'>Rarita-Schwinger field</a>)</p>
 </li>
 
 <li>
@@ -1126,15 +1158,27 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Rarita-Schwinger+field'>Rarita-Schwinger field</a></p>
-</li>
-
-<li>
 <p><a class='existingWikiWord' href='/nlab/show/monopole'>monopole</a></p>
 </li>
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/dual+graviton'>dual graviton</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/auxiliary+field'>auxiliary fields</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/ghost+field'>ghost field</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/antifield'>antifield</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/anti-ghost+field'>antighost field</a>, <a class='existingWikiWord' href='/nlab/show/Nakanishi-Lautrup+field'>Nakanishi-Lautrup field</a></p>
 </li>
 </ul>
 
@@ -1149,14 +1193,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on September  3, 2013 13:41:16 
+  Revised on October 23, 2017 05:36:15 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.138.125)
+  (188.109.125.236)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/neutron" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/neutron" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/neutron/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/neutron" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/neutron" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
