--- a/pages/18710.html
+++ b/pages/18710.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      sphere fiber bundle in nLab
+      sub-bundle in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      sphere fiber bundle
+      sub-bundle
   </h1>
 
 
@@ -509,28 +509,34 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples_2'>Examples</a></li></ul></div>
-<h2 id='idea'>Idea</h2>
+<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#examples_2'>Examples</a></li></ul></div>
+<h2 id='definition'>Definition</h2>
 
-<p>A <em>sphere fiber bundle</em> is a <a class='existingWikiWord' href='/nlab/show/fiber+bundle'>fiber bundle</a> whose <a class='existingWikiWord' href='/nlab/show/fiber'>fibers</a> are <a class='existingWikiWord' href='/nlab/show/sphere'>spheres</a> <math class='maruku-mathml' display='inline' id='mathml_90a664e60be8ac41b42da09c674b5a8a04469119_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>S^n</annotation></semantics></math> of some <a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a> <math class='maruku-mathml' display='inline' id='mathml_90a664e60be8ac41b42da09c674b5a8a04469119_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>.</p>
+<p>A <em>sub-bundle</em> is a <a class='existingWikiWord' href='/nlab/show/subobject'>subobject</a> in a <a class='existingWikiWord' href='/nlab/show/category'>category</a> of <a class='existingWikiWord' href='/nlab/show/bundle'>bundles</a>.</p>
 
-<p>Often, but not always, this is considered in <a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a> or even in <a class='existingWikiWord' href='/nlab/show/stable+homotopy+theory'>stable homotopy theory</a>, hence for <a class='existingWikiWord' href='/nlab/show/fiber'>fibers</a> which have the (<a class='existingWikiWord' href='/nlab/show/stable+homotopy+type'>stable</a>) <a class='existingWikiWord' href='/nlab/show/homotopy+type'>homotopy type</a> of a sphere, in which case one speaks of <em><a class='existingWikiWord' href='/nlab/show/spherical+fibration'>spherical fibrations</a></em>. See there for more.</p>
+<p>If <math class='maruku-mathml' display='inline' id='mathml_3c0baf24f53156598b56634bf642d53bc91a77ec_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mo>[</mo><mi>E</mi><mover><mo>→</mo><mi>fb</mi></mover><mi>X</mi><mo>]</mo></mrow></mrow><annotation encoding='application/x-tex'>\left[ E \overset{fb}{\to} X\right]</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/bundle'>bundle</a>, then a sub-bundle is a <a class='existingWikiWord' href='/nlab/show/monomorphism'>monomorphism</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_3c0baf24f53156598b56634bf642d53bc91a77ec_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi><mo>↪</mo><mi>E</mi></mrow><annotation encoding='application/x-tex'>
+  S \hookrightarrow E
 
+</annotation></semantics></math></div>
+<p>in the given <a class='existingWikiWord' href='/nlab/show/over+category'>slice category</a> over <math class='maruku-mathml' display='inline' id='mathml_3c0baf24f53156598b56634bf642d53bc91a77ec_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>, hence</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_3c0baf24f53156598b56634bf642d53bc91a77ec_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mi>S</mi></mtd> <mtd></mtd> <mtd><mo>↪</mo></mtd> <mtd></mtd> <mtd><mi>E</mi></mtd></mtr> <mtr><mtd></mtd> <mtd><msub><mrow></mrow> <mpadded lspace='-100%width' width='0'><mrow><mo>∃</mo><mo>!</mo></mrow></mpadded></msub><mo>↘</mo></mtd> <mtd></mtd> <mtd><msub><mo>↙</mo> <mpadded width='0'><mi>fb</mi></mpadded></msub></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mi>X</mi></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+  \array{
+    S &amp;&amp; \hookrightarrow &amp;&amp; E
+    \\
+    &amp; {}_{\mathllap{\exists!}}\searrow &amp;&amp; \swarrow_{\mathrlap{fb}}
+    \\
+    &amp;&amp; X
+  }
+
+</annotation></semantics></math></div>
 <h2 id='examples_2'>Examples</h2>
 
-<p>A key example of sphere fiber bundles are the <em>unit sphere bundles</em> inside of <a class='existingWikiWord' href='/nlab/show/real+vector+bundle'>real vector bundles</a> that are equipped with <a class='existingWikiWord' href='/nlab/show/orthogonal+structure'>orthogonal structure</a>: the bundles whose <a class='existingWikiWord' href='/nlab/show/fiber'>fibers</a> are the <a class='existingWikiWord' href='/nlab/show/unit+sphere'>unit spheres</a> in the corresponding fiber of the given <a class='existingWikiWord' href='/nlab/show/real+vector+bundle'>real vector bundle</a>.</p>
-
-<p>These appear in the discussion of <a class='existingWikiWord' href='/nlab/show/Thom+space'>Thom spaces</a> and hence of <a class='existingWikiWord' href='/nlab/show/Thom+spectrum'>Thom spectra</a>, as well as in the discussion of <a class='existingWikiWord' href='/nlab/show/wavefront+set'>wave front sets</a>.</p>
-
-<p>
-</p>
+<ul>
+<li>Given a <a class='existingWikiWord' href='/nlab/show/real+vector+bundle'>real vector bundle</a> with <a class='existingWikiWord' href='/nlab/show/orthogonal+structure'>orthogonal structure</a>, then the sub-bundle whose <a class='existingWikiWord' href='/nlab/show/fiber'>fibers</a> are the <a class='existingWikiWord' href='/nlab/show/unit+sphere'>unit spheres</a> is called the <a class='existingWikiWord' href='/nlab/show/sphere+fiber+bundle'>unit sphere bundle</a> of the vector bundle.</li>
+</ul>
 
 <p>
- 
-</p>
-
-<p>
- 
 </p>
 
 <p>
@@ -539,22 +545,22 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on October 23, 2017 05:01:26 
+  Created on October 23, 2017 05:10:10 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.50.90)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/sphere+fiber+bundle" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/sub-bundle" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/sphere+fiber+bundle" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/sub-bundle" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/sphere+fiber+bundle" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/sub-bundle" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/sphere+fiber+bundle" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/sub-bundle" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
