--- a/pages/2197.html
+++ b/pages/2197.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      locally convex space in nLab
+      locally convex topological vector space in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      locally convex space
+      locally convex topological vector space
   </h1>
 
 
@@ -308,7 +308,10 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='rightHandSide'>
+    <p>
+</p>
+
+<div class='rightHandSide'>
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
@@ -339,7 +342,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/locally+convex+space'>locally convex topological vector space</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/locally+convex+topological+vector+space'>locally convex topological vector space</a></p>
 </li>
 
 <li>
@@ -462,33 +465,47 @@ margin-left: 0em;
 
 <h3 id='ContinuousLinearFunctionals'>Continuous linear functionals</h3>
 
-<p>One reason why locally convex <a class='existingWikiWord' href='/nlab/show/topological+vector+space'>topological vector spaces</a> are important is that lots of <a class='existingWikiWord' href='/nlab/show/linear+functional'>continuous linear functionals</a> exist on them, at least if one assumes an appropriate choice principle, e.g., <a class='existingWikiWord' href='/nlab/show/axiom+of+choice'>axiom of choice</a> or <a class='existingWikiWord' href='/nlab/show/ultrafilter+theorem'>ultrafilter theorem</a> (or just <a class='existingWikiWord' href='/nlab/show/dependent+choice'>dependent choice</a> for a <a class='existingWikiWord' href='/nlab/show/separable+space'>separable space</a>). This fact is encapsulated in the <a class='existingWikiWord' href='/nlab/show/Hahn-Banach+theorem'>Hahn-Banach theorem</a>; a nice exposition is given in <a href='#Tao09'>Tao 09</a>. By way of contrast, a <a class='existingWikiWord' href='/nlab/show/topological+vector+space'>topological vector space</a> which is <em>not</em> locally convex, such as the <a class='existingWikiWord' href='/nlab/show/Lebesgue+space'>Lebesgue space</a> <math class='maruku-mathml' display='inline' id='mathml_9e3b2036930d2c493929e93d398d538e0395790a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>L</mi> <mi>p</mi></msup><mo stretchy='false'>(</mo><mo stretchy='false'>[</mo><mn>0</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>]</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>L^p([0, 1])</annotation></semantics></math> where <math class='maruku-mathml' display='inline' id='mathml_9e3b2036930d2c493929e93d398d538e0395790a_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn><mo>&lt;</mo><mi>p</mi><mo>&lt;</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>0 \lt p \lt 1</annotation></semantics></math>, need not have any (nonzero) <a class='existingWikiWord' href='/nlab/show/linear+functional'>continuous linear functionals</a> at all.</p>
+<p>One reason why locally convex <a class='existingWikiWord' href='/nlab/show/topological+vector+space'>topological vector spaces</a> are important is that lots of <a class='existingWikiWord' href='/nlab/show/linear+functional'>continuous linear functionals</a> exist on them, at least if one assumes an appropriate choice principle, e.g., <a class='existingWikiWord' href='/nlab/show/axiom+of+choice'>axiom of choice</a> or <a class='existingWikiWord' href='/nlab/show/ultrafilter+theorem'>ultrafilter theorem</a> (or just <a class='existingWikiWord' href='/nlab/show/dependent+choice'>dependent choice</a> for a <a class='existingWikiWord' href='/nlab/show/separable+space'>separable space</a>). This fact is encapsulated in the <a class='existingWikiWord' href='/nlab/show/Hahn-Banach+theorem'>Hahn-Banach theorem</a>; a nice exposition is given in <a href='#Tao09'>Tao 09</a>. By way of contrast, a <a class='existingWikiWord' href='/nlab/show/topological+vector+space'>topological vector space</a> which is <em>not</em> locally convex, such as the <a class='existingWikiWord' href='/nlab/show/Lebesgue+space'>Lebesgue space</a> <math class='maruku-mathml' display='inline' id='mathml_e844dd3e1411ddaa218701b0680ff58cb5f3ff67_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>L</mi> <mi>p</mi></msup><mo stretchy='false'>(</mo><mo stretchy='false'>[</mo><mn>0</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>]</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>L^p([0, 1])</annotation></semantics></math> where <math class='maruku-mathml' display='inline' id='mathml_e844dd3e1411ddaa218701b0680ff58cb5f3ff67_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn><mo>&lt;</mo><mi>p</mi><mo>&lt;</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>0 \lt p \lt 1</annotation></semantics></math>, need not have any (nonzero) <a class='existingWikiWord' href='/nlab/show/linear+functional'>continuous linear functionals</a> at all.</p>
 
 <div class='num_prop' id='AlternativeCharacterizationOfContinuityForLinearFunctionals'>
 <h6 id='proposition'>Proposition</h6>
 
 <p><strong>(alternative characterization of continuity for linear functionals)</strong></p>
 
-<p>Let <math class='maruku-mathml' display='inline' id='mathml_9e3b2036930d2c493929e93d398d538e0395790a_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math> be a <a class='existingWikiWord' href='/nlab/show/real+vector+space'>real vector space</a> and <math class='maruku-mathml' display='inline' id='mathml_9e3b2036930d2c493929e93d398d538e0395790a_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>τ</mi></mrow><annotation encoding='application/x-tex'>\tau</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/topological+space'>topology</a> on <math class='maruku-mathml' display='inline' id='mathml_9e3b2036930d2c493929e93d398d538e0395790a_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math> that makes it a locally convex topological vector space, induced from a <a class='existingWikiWord' href='/nlab/show/direction'>directed set</a> of <a class='existingWikiWord' href='/nlab/show/norm'>seminorms</a> <math class='maruku-mathml' display='inline' id='mathml_9e3b2036930d2c493929e93d398d538e0395790a_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>{</mo><msub><mi>p</mi> <mi>q</mi></msub><msub><mo stretchy='false'>}</mo> <mrow><mi>q</mi><mo>∈</mo><mi>Q</mi></mrow></msub></mrow><annotation encoding='application/x-tex'>\{p_q\}_{q \in Q}</annotation></semantics></math>. Then a <a class='existingWikiWord' href='/nlab/show/linear+map'>linear function</a> <math class='maruku-mathml' display='inline' id='mathml_9e3b2036930d2c493929e93d398d538e0395790a_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi><mo lspace='verythinmathspace'>:</mo><mi>V</mi><mo>→</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>L \colon V \to \mathbb{R}</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/continuous+map'>continuous function</a> with respect to <math class='maruku-mathml' display='inline' id='mathml_9e3b2036930d2c493929e93d398d538e0395790a_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>τ</mi></mrow><annotation encoding='application/x-tex'>\tau</annotation></semantics></math> precisely if it is <math class='maruku-mathml' display='inline' id='mathml_9e3b2036930d2c493929e93d398d538e0395790a_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>q</mi></mrow><annotation encoding='application/x-tex'>q</annotation></semantics></math>-continuous for some <math class='maruku-mathml' display='inline' id='mathml_9e3b2036930d2c493929e93d398d538e0395790a_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>q</mi><mo>∈</mo><mi>Q</mi></mrow><annotation encoding='application/x-tex'>q \in Q</annotation></semantics></math>:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_9e3b2036930d2c493929e93d398d538e0395790a_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><munder><mo>∃</mo><mrow><mi>q</mi><mo>∈</mo><mi>Q</mi></mrow></munder><mrow><mo>(</mo><munder><mo>∃</mo><mrow><mi>C</mi><mo>∈</mo><mo stretchy='false'>(</mo><mn>0</mn><mo>,</mo><mn>∞</mn><mo stretchy='false'>)</mo></mrow></munder><mrow><mo>(</mo><munder><mo>∀</mo><mrow><mi>v</mi><mo>∈</mo><mi>V</mi></mrow></munder><mrow><mo stretchy='false'>|</mo><mi>L</mi><mo stretchy='false'>(</mo><mi>v</mi><mo stretchy='false'>)</mo><mo stretchy='false'>|</mo></mrow><mo>≤</mo><mi>C</mi><msub><mi>p</mi> <mi>q</mi></msub><mo stretchy='false'>(</mo><mi>v</mi><mo stretchy='false'>)</mo><mo>)</mo></mrow><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_e844dd3e1411ddaa218701b0680ff58cb5f3ff67_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math> be a <a class='existingWikiWord' href='/nlab/show/real+vector+space'>real vector space</a> and <math class='maruku-mathml' display='inline' id='mathml_e844dd3e1411ddaa218701b0680ff58cb5f3ff67_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>τ</mi></mrow><annotation encoding='application/x-tex'>\tau</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/topological+space'>topology</a> on <math class='maruku-mathml' display='inline' id='mathml_e844dd3e1411ddaa218701b0680ff58cb5f3ff67_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math> that makes it a locally convex topological vector space, induced from a <a class='existingWikiWord' href='/nlab/show/direction'>directed set</a> of <a class='existingWikiWord' href='/nlab/show/norm'>seminorms</a> <math class='maruku-mathml' display='inline' id='mathml_e844dd3e1411ddaa218701b0680ff58cb5f3ff67_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>{</mo><msub><mi>p</mi> <mi>q</mi></msub><mo lspace='verythinmathspace'>:</mo><mi>V</mi><mo>→</mo><mi>ℝ</mi><msub><mo stretchy='false'>}</mo> <mrow><mi>q</mi><mo>∈</mo><mi>Q</mi></mrow></msub></mrow><annotation encoding='application/x-tex'>\{p_q \colon V \to \mathbb{R}\}_{q \in Q}</annotation></semantics></math>. Then a <a class='existingWikiWord' href='/nlab/show/linear+map'>linear function</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_e844dd3e1411ddaa218701b0680ff58cb5f3ff67_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi><mo lspace='verythinmathspace'>:</mo><mi>V</mi><mo>→</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>
+  L \colon V \to \mathbb{R}
+
+</annotation></semantics></math></div>
+<p>is a <a class='existingWikiWord' href='/nlab/show/continuous+map'>continuous function</a> with respect to <math class='maruku-mathml' display='inline' id='mathml_e844dd3e1411ddaa218701b0680ff58cb5f3ff67_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>τ</mi></mrow><annotation encoding='application/x-tex'>\tau</annotation></semantics></math>, hence a <a class='existingWikiWord' href='/nlab/show/linear+functional'>continuous linear functional</a>, precisely if it is <math class='maruku-mathml' display='inline' id='mathml_e844dd3e1411ddaa218701b0680ff58cb5f3ff67_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>q</mi></mrow><annotation encoding='application/x-tex'>q</annotation></semantics></math>-continuous for some <math class='maruku-mathml' display='inline' id='mathml_e844dd3e1411ddaa218701b0680ff58cb5f3ff67_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>q</mi><mo>∈</mo><mi>Q</mi></mrow><annotation encoding='application/x-tex'>q \in Q</annotation></semantics></math>:</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_e844dd3e1411ddaa218701b0680ff58cb5f3ff67_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mo>(</mo><mi>L</mi><mspace width='thinmathspace'></mspace><mtext>continuous with respect to</mtext><mspace width='thinmathspace'></mspace><mi>τ</mi><mo>)</mo></mrow><mspace width='thickmathspace'></mspace><mo>⇔</mo><mspace width='thickmathspace'></mspace><munder><mo>∃</mo><mrow><mi>q</mi><mo>∈</mo><mi>Q</mi></mrow></munder><mrow><mo>(</mo><munder><mo>∃</mo><mrow><mi>C</mi><mo>∈</mo><mo stretchy='false'>(</mo><mn>0</mn><mo>,</mo><mn>∞</mn><mo stretchy='false'>)</mo></mrow></munder><mrow><mo>(</mo><munder><mo>∀</mo><mrow><mi>v</mi><mo>∈</mo><mi>V</mi></mrow></munder><mrow><mo>(</mo><mspace width='thinmathspace'></mspace><mrow><mo stretchy='false'>|</mo><mi>L</mi><mo stretchy='false'>(</mo><mi>v</mi><mo stretchy='false'>)</mo><mo stretchy='false'>|</mo></mrow><mo>≤</mo><mi>C</mi><msub><mi>p</mi> <mi>q</mi></msub><mo stretchy='false'>(</mo><mi>v</mi><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>)</mo></mrow><mo>)</mo></mrow><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+  \left(
+    L \,\text{continuous with respect to}\, \tau
+  \right)
+  \;\Leftrightarrow\;
   \underset{q \in Q}{\exists}
   \left(
     \underset{C \in (0,\infty)}{\exists}
     \left(
       \underset{v \in V}{\forall}
-      {\vert L(v)\vert}
-       \leq C p_q(v)
+      \left(
+        \,
+        {\vert L(v)\vert}
+         \leq 
+        C p_q(v)
+        \,
+      \right)
     \right)
   \right)
   \,.
 
 </annotation></semantics></math></div></div>
 
-<p>e.g. prop. 4.6.1 here: <a href='http://www.math.uni-konstanz.de/~infusino/Lect13.pdf'>pdf</a></p>
+<p>e.g. prop. 4.6.1 here: <a href='http://www.math.uni-konstanz.de/~infusino/Lect13.pdf'>pdf</a>, or remark 3-4 4. here: <a href='https://www.math.ksu.edu/~nagy/func-an-2007-2008/lcvs-5.pdf'>pdf</a></p>
 
 <h3 id='coprobes_and_curves'>Co-Probes and curves</h3>
 
-<p>The collections of <a class='existingWikiWord' href='/nlab/show/linear+functional'>continuous linear functionals</a> on a LCTVS is used in a way analogous to the collection of <a class='existingWikiWord' href='/nlab/show/coordinate+system'>coordinate</a> <a class='existingWikiWord' href='/nlab/show/projection'>projections</a> <math class='maruku-mathml' display='inline' id='mathml_9e3b2036930d2c493929e93d398d538e0395790a_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>pr</mi> <mi>i</mi></msub><mo>:</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>→</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>pr_i:\mathbb{R}^n\to \mathbb{R}</annotation></semantics></math> out of a <a class='existingWikiWord' href='/nlab/show/cartesian+space'>Cartesian space</a>. For example, <a class='existingWikiWord' href='/nlab/show/curve'>curves</a> in a LCTVS over the reals can be composed with functionals to arrive at a collection of functions <math class='maruku-mathml' display='inline' id='mathml_9e3b2036930d2c493929e93d398d538e0395790a_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℝ</mi><mo>→</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{R} \to \mathbb{R}</annotation></semantics></math> which are analogous to the ‘components’ of the curve.</p>
+<p>The collections of <a class='existingWikiWord' href='/nlab/show/linear+functional'>continuous linear functionals</a> on a LCTVS is used in a way analogous to the collection of <a class='existingWikiWord' href='/nlab/show/coordinate+system'>coordinate</a> <a class='existingWikiWord' href='/nlab/show/projection'>projections</a> <math class='maruku-mathml' display='inline' id='mathml_e844dd3e1411ddaa218701b0680ff58cb5f3ff67_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>pr</mi> <mi>i</mi></msub><mo>:</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>→</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>pr_i:\mathbb{R}^n\to \mathbb{R}</annotation></semantics></math> out of a <a class='existingWikiWord' href='/nlab/show/cartesian+space'>Cartesian space</a>. For example, <a class='existingWikiWord' href='/nlab/show/curve'>curves</a> in a LCTVS over the reals can be composed with functionals to arrive at a collection of functions <math class='maruku-mathml' display='inline' id='mathml_e844dd3e1411ddaa218701b0680ff58cb5f3ff67_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℝ</mi><mo>→</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{R} \to \mathbb{R}</annotation></semantics></math> which are analogous to the ‘components’ of the curve.</p>
 
 <p>In one respect, a locally convex TVS is a <a class='existingWikiWord' href='/nlab/show/nice+topological+space'>nice topological space</a> in that there are enough co-probes by maps to the base field.</p>
 
@@ -1123,22 +1140,22 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 23, 2017 06:59:47 
+  Revised on October 23, 2017 07:32:14 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (146.60.210.16)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/locally+convex+space" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/locally+convex+space/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/locally+convex+space" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/locally+convex+space" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/locally+convex+topological+vector+space" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/locally+convex+topological+vector+space/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/locally+convex+topological+vector+space" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/locally+convex+topological+vector+space" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/locally+convex+space" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/locally+convex+topological+vector+space" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/locally+convex+space" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/locally+convex+topological+vector+space" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/locally+convex+space" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/locally+convex+topological+vector+space" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
