--- a/pages/2518.html
+++ b/pages/2518.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -498,11 +498,11 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_pages'>Related Pages</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>A <strong>structural set theory</strong> is a <a class='existingWikiWord' href='/nlab/show/set+theory'>set theory</a> which describes structural mathematics, and <em>only</em> structural mathematics. As conceived by the structuralist, mathematics is the study of structures whose form is independent of the particular attributes of the things that make them up. For instance, in <a class='existingWikiWord' href='/nlab/show/ZFC'>ZF</a> set theory, “the set of natural numbers” can be defined as the von Neumann naturals <math class='maruku-mathml' display='inline' id='mathml_97ba101647e08678b5fbab380d4378695507a929_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ω</mi> <mi>N</mi></msub><mo>=</mo><mo stretchy='false'>{</mo><mi>∅</mi><mo>,</mo><mo stretchy='false'>{</mo><mi>∅</mi><mo stretchy='false'>}</mo><mo>,</mo><mo stretchy='false'>{</mo><mi>∅</mi><mo>,</mo><mo stretchy='false'>{</mo><mi>∅</mi><mo stretchy='false'>}</mo><mo stretchy='false'>}</mo><mo>,</mo><mi>…</mi><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>\omega_N = \{ \emptyset, \{\emptyset\}, \{\emptyset, \{\emptyset\}\}, \dots \}</annotation></semantics></math> or alternately as the Zermelo naturals <math class='maruku-mathml' display='inline' id='mathml_97ba101647e08678b5fbab380d4378695507a929_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ω</mi> <mi>Z</mi></msub><mo>=</mo><mo stretchy='false'>{</mo><mi>∅</mi><mo>,</mo><mo stretchy='false'>{</mo><mi>∅</mi><mo stretchy='false'>}</mo><mo>,</mo><mo stretchy='false'>{</mo><mo stretchy='false'>{</mo><mi>∅</mi><mo stretchy='false'>}</mo><mo stretchy='false'>}</mo><mo>,</mo><mi>…</mi><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>\omega_Z = \{ \emptyset, \{\emptyset\}, \{\{\emptyset\}\}, \dots \}</annotation></semantics></math>, but either definition has all the necessary properties (namely, the properties making it a <a class='existingWikiWord' href='/nlab/show/natural+numbers+object'>natural numbers object</a> in <a class='existingWikiWord' href='/nlab/show/Set'>the category of sets</a>, when equipped with an appropriate successor operation). See, for instance, <a href='#WhatNumbersCouldNotBe'>Benacerraf’s paper</a>.</p>
+<p>A <strong>structural set theory</strong> is a <a class='existingWikiWord' href='/nlab/show/set+theory'>set theory</a> which describes structural mathematics, and <em>only</em> structural mathematics. As conceived by the structuralist, mathematics is the study of structures whose form is independent of the particular attributes of the things that make them up. For instance, in <a class='existingWikiWord' href='/nlab/show/ZFC'>ZF</a> set theory, “the set of natural numbers” can be defined as the von Neumann naturals <math class='maruku-mathml' display='inline' id='mathml_c9bedfa608af5f18116bdbf4b7ca1d65cdc8e1ea_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ω</mi> <mi>N</mi></msub><mo>=</mo><mo stretchy='false'>{</mo><mi>∅</mi><mo>,</mo><mo stretchy='false'>{</mo><mi>∅</mi><mo stretchy='false'>}</mo><mo>,</mo><mo stretchy='false'>{</mo><mi>∅</mi><mo>,</mo><mo stretchy='false'>{</mo><mi>∅</mi><mo stretchy='false'>}</mo><mo stretchy='false'>}</mo><mo>,</mo><mi>…</mi><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>\omega_N = \{ \emptyset, \{\emptyset\}, \{\emptyset, \{\emptyset\}\}, \dots \}</annotation></semantics></math> or alternately as the Zermelo naturals <math class='maruku-mathml' display='inline' id='mathml_c9bedfa608af5f18116bdbf4b7ca1d65cdc8e1ea_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ω</mi> <mi>Z</mi></msub><mo>=</mo><mo stretchy='false'>{</mo><mi>∅</mi><mo>,</mo><mo stretchy='false'>{</mo><mi>∅</mi><mo stretchy='false'>}</mo><mo>,</mo><mo stretchy='false'>{</mo><mo stretchy='false'>{</mo><mi>∅</mi><mo stretchy='false'>}</mo><mo stretchy='false'>}</mo><mo>,</mo><mi>…</mi><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>\omega_Z = \{ \emptyset, \{\emptyset\}, \{\{\emptyset\}\}, \dots \}</annotation></semantics></math>, but either definition has all the necessary properties (namely, the properties making it a <a class='existingWikiWord' href='/nlab/show/natural+numbers+object'>natural numbers object</a> in <a class='existingWikiWord' href='/nlab/show/Set'>the category of sets</a>, when equipped with an appropriate successor operation). See, for instance, <a href='#WhatNumbersCouldNotBe'>Benacerraf’s paper</a>.</p>
 
-<p>The structuralist says, essentially, that the number “<math class='maruku-mathml' display='inline' id='mathml_97ba101647e08678b5fbab380d4378695507a929_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>3</mn></mrow><annotation encoding='application/x-tex'>3</annotation></semantics></math>” should denote “the third place in a <a class='existingWikiWord' href='/nlab/show/natural+numbers+object'>natural numbers object</a>” rather than some particular set such as <math class='maruku-mathml' display='inline' id='mathml_97ba101647e08678b5fbab380d4378695507a929_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>{</mo><mi>∅</mi><mo>,</mo><mo stretchy='false'>{</mo><mi>∅</mi><mo stretchy='false'>}</mo><mo>,</mo><mo stretchy='false'>{</mo><mi>∅</mi><mo>,</mo><mo stretchy='false'>{</mo><mi>∅</mi><mo stretchy='false'>}</mo><mo stretchy='false'>}</mo><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>\{\emptyset, \{\emptyset\}, \{\emptyset, \{\emptyset\}\}\}</annotation></semantics></math> as it does in any definition of “the set of natural numbers” in ZF.</p>
+<p>The structuralist says, essentially, that the number “<math class='maruku-mathml' display='inline' id='mathml_c9bedfa608af5f18116bdbf4b7ca1d65cdc8e1ea_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>3</mn></mrow><annotation encoding='application/x-tex'>3</annotation></semantics></math>” should denote “the third place in a <a class='existingWikiWord' href='/nlab/show/natural+numbers+object'>natural numbers object</a>” rather than some particular set such as <math class='maruku-mathml' display='inline' id='mathml_c9bedfa608af5f18116bdbf4b7ca1d65cdc8e1ea_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>{</mo><mi>∅</mi><mo>,</mo><mo stretchy='false'>{</mo><mi>∅</mi><mo stretchy='false'>}</mo><mo>,</mo><mo stretchy='false'>{</mo><mi>∅</mi><mo>,</mo><mo stretchy='false'>{</mo><mi>∅</mi><mo stretchy='false'>}</mo><mo stretchy='false'>}</mo><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>\{\emptyset, \{\emptyset\}, \{\emptyset, \{\emptyset\}\}\}</annotation></semantics></math> as it does in any definition of “the set of natural numbers” in ZF.</p>
 
-<p><em>Structural set theory</em> provides a foundation for mathematics which is free of this “superfluous baggage” attendant on theories such as ZF, in which there is lots of information such as whether or not <math class='maruku-mathml' display='inline' id='mathml_97ba101647e08678b5fbab380d4378695507a929_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>3</mn><mo>∈</mo><mn>17</mn></mrow><annotation encoding='application/x-tex'>3\in 17</annotation></semantics></math> (yes, says von Neumann; no, says Zermelo) which is never used in mathematics. In a structural set theory, the elements (such as <math class='maruku-mathml' display='inline' id='mathml_97ba101647e08678b5fbab380d4378695507a929_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>3</mn></mrow><annotation encoding='application/x-tex'>3</annotation></semantics></math>) of a set (such as <math class='maruku-mathml' display='inline' id='mathml_97ba101647e08678b5fbab380d4378695507a929_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{N}</annotation></semantics></math>) <em>have</em> no identity apart from their existence as elements of that set, and whatever structure is given to that set by the functions and relations placed upon it. That is, sets (together with other attendant concepts such as <a class='existingWikiWord' href='/nlab/show/element'>elements</a>, <a class='existingWikiWord' href='/nlab/show/function'>functions</a>, and <a class='existingWikiWord' href='/nlab/show/relation'>relations</a>) are the “raw material” from which mathematical structures are built. By contrast, theories such as ZF may be called <a class='existingWikiWord' href='/nlab/show/material+set+theory'>material set theories</a> or <em>membership-based set theories</em>.</p>
+<p><em>Structural set theory</em> provides a foundation for mathematics which is free of this “superfluous baggage” attendant on theories such as ZF, in which there is lots of information such as whether or not <math class='maruku-mathml' display='inline' id='mathml_c9bedfa608af5f18116bdbf4b7ca1d65cdc8e1ea_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>3</mn><mo>∈</mo><mn>17</mn></mrow><annotation encoding='application/x-tex'>3\in 17</annotation></semantics></math> (yes, says von Neumann; no, says Zermelo) which is never used in mathematics. In a structural set theory, the elements (such as <math class='maruku-mathml' display='inline' id='mathml_c9bedfa608af5f18116bdbf4b7ca1d65cdc8e1ea_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>3</mn></mrow><annotation encoding='application/x-tex'>3</annotation></semantics></math>) of a set (such as <math class='maruku-mathml' display='inline' id='mathml_c9bedfa608af5f18116bdbf4b7ca1d65cdc8e1ea_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{N}</annotation></semantics></math>) <em>have</em> no identity apart from their existence as elements of that set, and whatever structure is given to that set by the functions and relations placed upon it. That is, sets (together with other attendant concepts such as <a class='existingWikiWord' href='/nlab/show/element'>elements</a>, <a class='existingWikiWord' href='/nlab/show/function'>functions</a>, and <a class='existingWikiWord' href='/nlab/show/relation'>relations</a>) are the “raw material” from which mathematical structures are built. By contrast, theories such as ZF may be called <a class='existingWikiWord' href='/nlab/show/material+set+theory'>material set theories</a> or <em>membership-based set theories</em>.</p>
 
 <p>Thus, somewhat paradoxically, it turns out that one of the primary attributes of a structural set theory is that the <em>elements</em> of a set have <em>no</em> “internal” structure; they are only given structure by means of functions and relations. In particular, they are not themselves sets, and by default cannot be elements of any other set (not in the sense that it is false that they are, but in the sense that it is meaningless to ask whether they are), so that elements of different sets cannot be compared (unless and until extra structure is imposed). Structural set theory thus looks very much like <a class='existingWikiWord' href='/nlab/show/type+theory'>type theory</a>. We contrast it with <a class='existingWikiWord' href='/nlab/show/material+set+theory'>material set theories</a> such as ZF, in which the elements of sets can have internal structure, and are often (perhaps always) themselves sets.</p>
 
@@ -552,17 +552,39 @@ margin-left: 0em;
 
 <h2 id='references'>References</h2>
 
-<ul id='WhatNumbersCouldNotBe'>
-<li>P. Benacerraf, <em>What numbers could not be</em>, The Philosophical Review Vol. 74, No. 1, Jan., 1965</li>
-</ul>
-
-<ul id='NumbersCanBe'>
-<li><a class='existingWikiWord' href='/nlab/show/Colin+McLarty'>Colin McLarty</a>, <em>Numbers can be just what they have to</em>, Noûs, Vol 27, No. 4, 1993.</li>
-</ul>
+<p>An textbook that introduces the <a class='existingWikiWord' href='/nlab/show/foundation+of+mathematics'>foundations of mathematics</a> informally via structural set theory is</p>
 
 <ul>
-<li id='RijkeSpitter13'>
-<p><a class='existingWikiWord' href='/nlab/show/Egbert+Rijke'>Egbert Rijke</a>, <a class='existingWikiWord' href='/nlab/show/Bas+Spitters'>Bas Spitters</a>, <em>Sets in homotopy type theory</em> (<a href='http://arxiv.org/abs/1305.3835'>arXiv:1305.3835</a>)</p>
+<li><a class='existingWikiWord' href='/nlab/show/William+Lawvere'>William Lawvere</a>, <a class='existingWikiWord' href='/nlab/show/Robert+Rosebrugh'>Robert Rosebrugh</a>, <em><a class='existingWikiWord' href='/nlab/show/Sets+for+Mathematics'>Sets for Mathematics</a></em>, Cambridge UP 2003.</li>
+</ul>
+
+<p>The formal account of <a class='existingWikiWord' href='/nlab/show/ETCS'>ETCS</a> originates with</p>
+
+<ul>
+<li id='Lawvere65'><a class='existingWikiWord' href='/nlab/show/William+Lawvere'>William Lawvere</a>, <em>An elementary theory of the category of sets</em>, Proceedings of the National Academy of Science of the U.S.A <strong>52</strong> pp.1506-1511 (1965). (<a href='http://www.ncbi.nlm.nih.gov/pmc/articles/PMC300477/pdf/pnas00186-0196.pdf'>pdf</a>)</li>
+</ul>
+
+<p>Structural set theory found in <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a> is discussed in</p>
+
+<ul>
+<li id='RijkeSpitter13'><a class='existingWikiWord' href='/nlab/show/Egbert+Rijke'>Egbert Rijke</a>, <a class='existingWikiWord' href='/nlab/show/Bas+Spitters'>Bas Spitters</a>, <em>Sets in homotopy type theory</em> (<a href='http://arxiv.org/abs/1305.3835'>arXiv:1305.3835</a>)</li>
+</ul>
+
+<p>which became one chapter in</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/UF-IAS-2012'>Univalent Foundations Project</a>, <em><a class='existingWikiWord' href='/nlab/show/Homotopy+Type+Theory+--+Univalent+Foundations+of+Mathematics'>Homotopy Type Theory – Univalent Foundations of Mathematics</a></em></li>
+</ul>
+
+<p>See also</p>
+
+<ul>
+<li>
+<p>P. Benacerraf, <em>What numbers could not be</em>, The Philosophical Review Vol. 74, No. 1, Jan., 1965</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Colin+McLarty'>Colin McLarty</a>, <em>Numbers can be just what they have to</em>, Noûs, Vol 27, No. 4, 1993.</p>
 </li>
 
 <li>
@@ -588,14 +610,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on July 14, 2015 18:28:11 
-  by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
-  (108.247.150.134)
+  Revised on October 26, 2017 03:53:43 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/structural+set+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/structural+set+theory/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/structural+set+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/structural+set+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/structural+set+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/structural+set+theory/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/structural+set+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/structural+set+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
