--- a/pages/6165.html
+++ b/pages/6165.html
@@ -312,7 +312,11 @@ margin-left: 0em;
 <li><a href='http://en.wikipedia.org/wiki/George_W._Whitehead'>Wikipedia entry</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_9afee81f5597e60909d8877e2d6d913441516cd7_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<blockquote>
+<p>Not to be confused with <a class='existingWikiWord' href='/nlab/show/Henry+Whitehead'>J. H. C. Whitehead</a>, who also worked in <a class='existingWikiWord' href='/nlab/show/algebraic+topology'>algebraic topology</a>.</p>
+</blockquote>
+
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_8c0014523a7d998ab658efc2243d515d74082366_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
@@ -321,10 +325,6 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Spanier-Whitehead+duality'>Spanier-Whitehead duality</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Whitehead+theorem'>Whitehead theorem</a></p>
 </li>
 
 <li>
@@ -340,14 +340,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 16, 2016 13:57:11 
+  Revised on October 26, 2017 03:25:51 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (82.113.121.174)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/George+Whitehead" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/George+Whitehead/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/George+Whitehead" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/George+Whitehead" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/George+Whitehead" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/George+Whitehead/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/George+Whitehead" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/George+Whitehead" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
