--- a/pages/16400.html
+++ b/pages/16400.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -712,20 +712,20 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>on <a class='existingWikiWord' href='/nlab/show/set+theory'>set theory</a> and the <a class='existingWikiWord' href='/nlab/show/foundation+of+mathematics'>foundations of mathematics</a> from a practical and <a class='existingWikiWord' href='/nlab/show/logic'>category theoretic</a> point of view (informal <a class='existingWikiWord' href='/nlab/show/ETCS'>ETCS</a>).</p>
+<p>on <a class='existingWikiWord' href='/nlab/show/set+theory'>set theory</a> and the <a class='existingWikiWord' href='/nlab/show/foundation+of+mathematics'>foundations of mathematics</a> from a practical and <a class='existingWikiWord' href='/nlab/show/logic'>category theoretic</a> point of view (“<a class='existingWikiWord' href='/nlab/show/structural+set+theory'>structural set theory</a>”, “informal <a class='existingWikiWord' href='/nlab/show/ETCS'>ETCS</a>”).</p>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/reference'>reference</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on March 18, 2015 12:35:39 
+  Revised on October 26, 2017 03:47:10 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (80.92.246.195)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sets+for+Mathematics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sets+for+Mathematics/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Sets+for+Mathematics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sets+for+Mathematics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sets+for+Mathematics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sets+for+Mathematics/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Sets+for+Mathematics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sets+for+Mathematics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
