--- a/pages/2696.html
+++ b/pages/2696.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1067,7 +1067,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#classical_case'>Classical case</a></li><li><a href='#equivariant_version'>Equivariant version</a></li><li><a href='#in_general_toposes'>In general <math class='maruku-mathml' display='inline' id='mathml_eb2140096e91340283d46b55d4c726f974d5fbca_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-toposes</a></li><li><a href='#in_homotopy_type_theory'>In homotopy type theory</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#classical_case'>Classical case</a></li><li><a href='#equivariant_version'>Equivariant version</a></li><li><a href='#in_general_toposes'>In general <math class='maruku-mathml' display='inline' id='mathml_5de1a1361172b541f9c4043426a255575c868829_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-toposes</a></li><li><a href='#in_homotopy_type_theory'>In homotopy type theory</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='classical_case'>Classical case</h2>
 
 <p>The classical <strong>Whitehead theorem</strong> asserts that</p>
@@ -1090,9 +1090,9 @@ margin-left: 0em;
 
 <h2 id='equivariant_version'>Equivariant version</h2>
 
-<p>In <math class='maruku-mathml' display='inline' id='mathml_eb2140096e91340283d46b55d4c726f974d5fbca_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/equivariant+homotopy+theory'>equivariant homotopy theory</a> the statement is that <math class='maruku-mathml' display='inline' id='mathml_eb2140096e91340283d46b55d4c726f974d5fbca_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math>-homotopy equivalences between <a class='existingWikiWord' href='/nlab/show/G-CW+complex'>G-CW complexes</a> are equivalent to maps that are weak homotopy equivalences on <a class='existingWikiWord' href='/nlab/show/fixed+point'>fixed point</a> spaces for all closed subgroups (e.g. <a href='#GreenleesMay95'>Greenlees-May 95, theorem 2.4</a>). See at <em><a class='existingWikiWord' href='/nlab/show/equivariant+Whitehead+theorem'>equivariant Whitehead theorem</a></em>.</p>
+<p>In <math class='maruku-mathml' display='inline' id='mathml_5de1a1361172b541f9c4043426a255575c868829_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/equivariant+homotopy+theory'>equivariant homotopy theory</a> the statement is that <math class='maruku-mathml' display='inline' id='mathml_5de1a1361172b541f9c4043426a255575c868829_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math>-homotopy equivalences between <a class='existingWikiWord' href='/nlab/show/G-CW+complex'>G-CW complexes</a> are equivalent to maps that are weak homotopy equivalences on <a class='existingWikiWord' href='/nlab/show/fixed+point'>fixed point</a> spaces for all closed subgroups (e.g. <a href='#GreenleesMay95'>Greenlees-May 95, theorem 2.4</a>). See at <em><a class='existingWikiWord' href='/nlab/show/equivariant+Whitehead+theorem'>equivariant Whitehead theorem</a></em>.</p>
 
-<h2 id='in_general_toposes'>In general <math class='maruku-mathml' display='inline' id='mathml_eb2140096e91340283d46b55d4c726f974d5fbca_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-toposes</h2>
+<h2 id='in_general_toposes'>In general <math class='maruku-mathml' display='inline' id='mathml_5de1a1361172b541f9c4043426a255575c868829_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-toposes</h2>
 
 <p>There is a notion of <a class='existingWikiWord' href='/nlab/show/homotopy+group'>homotopy groups</a> for objects in every <a class='existingWikiWord' href='/nlab/show/infinity-stack'>∞-stack</a> <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>(∞,1)-topos</a>, as described at <a class='existingWikiWord' href='/nlab/show/homotopy+groups+in+an+%28infinity%2C1%29-topos'>homotopy group (of an ∞-stack)</a>. Accordingly, there is a notion of <a class='existingWikiWord' href='/nlab/show/weak+homotopy+equivalence'>weak homotopy equivalence</a> in every <a class='existingWikiWord' href='/nlab/show/infinity-stack'>∞-stack</a> <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>(∞,1)-topos</a> and hence an analog of the statement of Whiteheads theorem. One finds that</p>
 
@@ -1100,13 +1100,13 @@ margin-left: 0em;
 
 <p>The <a class='existingWikiWord' href='/nlab/show/infinity-stack'>∞-stack</a> <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>(∞,1)-topos</a>es in which the Whitehead theorem does hold are the <a class='existingWikiWord' href='/nlab/show/hypercomplete+%28infinity%2C1%29-topos'>hypercomplete (∞,1)-topos</a>es. These are precisely the ones that are <a class='existingWikiWord' href='/nlab/show/locally+presentable+%28infinity%2C1%29-category'>presented</a> by a local <a class='existingWikiWord' href='/nlab/show/model+structure+on+simplicial+presheaves'>model structure on simplicial presheaves</a>.</p>
 
-<p>For instance the hypercomplete <math class='maruku-mathml' display='inline' id='mathml_eb2140096e91340283d46b55d4c726f974d5fbca_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-topos <a class='existingWikiWord' href='/nlab/show/Top'>Top</a> is presented by the model structure on simplicial presheaves on the point, namely the <a class='existingWikiWord' href='/nlab/show/model+structure+on+simplicial+sets'>model structure on simplicial sets</a>.</p>
+<p>For instance the hypercomplete <math class='maruku-mathml' display='inline' id='mathml_5de1a1361172b541f9c4043426a255575c868829_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-topos <a class='existingWikiWord' href='/nlab/show/Top'>Top</a> is presented by the model structure on simplicial presheaves on the point, namely the <a class='existingWikiWord' href='/nlab/show/model+structure+on+simplicial+sets'>model structure on simplicial sets</a>.</p>
 
 <h2 id='in_homotopy_type_theory'>In homotopy type theory</h2>
 
 <p>Since <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a> admits models in <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>(∞,1)-toposes</a> (and in particular in non-hypercomplete ones), Whitehead’s theorem is not provable when regarded as a statement about types in homotopy type theory. From this perspective, the truth of Whitehead’s theorem is a <a class='existingWikiWord' href='/nlab/show/foundational+axiom'>foundational axiom</a> that may be regarded as a “classicality” property, akin to <a class='existingWikiWord' href='/nlab/show/excluded+middle'>excluded middle</a> or the <a class='existingWikiWord' href='/nlab/show/axiom+of+choice'>axiom of choice</a> — we call it <strong>Whitehead’s principle</strong> (not to be confused with <span class='newWikiWord'>Whitehead&#39;s problem<a href='/nlab/new/Whitehead%27s+problem'>?</a></span>, another statement that is independent of the usual axioms of set theory).</p>
 
-<p>Whitehead’s principle does hold, however, for maps between <a class='existingWikiWord' href='/nlab/show/homotopy+n-type'>homotopy n-types</a> for any finite <math class='maruku-mathml' display='inline' id='mathml_eb2140096e91340283d46b55d4c726f974d5fbca_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>; this is provable in homotopy type theory by <a class='existingWikiWord' href='/nlab/show/induction'>induction</a> on <math class='maruku-mathml' display='inline' id='mathml_eb2140096e91340283d46b55d4c726f974d5fbca_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>.</p>
+<p>Whitehead’s principle does hold, however, for maps between <a class='existingWikiWord' href='/nlab/show/homotopy+n-type'>homotopy n-types</a> for any finite <math class='maruku-mathml' display='inline' id='mathml_5de1a1361172b541f9c4043426a255575c868829_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>; this is provable in homotopy type theory by <a class='existingWikiWord' href='/nlab/show/induction'>induction</a> on <math class='maruku-mathml' display='inline' id='mathml_5de1a1361172b541f9c4043426a255575c868829_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -1126,6 +1126,8 @@ margin-left: 0em;
 
 <h2 id='references'>References</h2>
 
+<p>Named after <a class='existingWikiWord' href='/nlab/show/Henry+Whitehead'>J. H. C. Whitehead</a>.</p>
+
 <ul>
 <li id='ElmendorfKrizMay95'><a class='existingWikiWord' href='/nlab/show/Anthony+Elmendorf'>Anthony Elmendorf</a>, <a class='existingWikiWord' href='/nlab/show/Igor+Kriz'>Igor Kriz</a>, <a class='existingWikiWord' href='/nlab/show/Peter+May'>Peter May</a>, section 1 of <em><a class='existingWikiWord' href='/nlab/show/Modern+foundations+for+stable+homotopy+theory'>Modern foundations for stable homotopy theory</a></em>, in <a class='existingWikiWord' href='/nlab/show/Ioan+James'>Ioan Mackenzie James</a> (ed.), <em><a class='existingWikiWord' href='/nlab/show/Handbook+of+Algebraic+Topology'>Handbook of Algebraic Topology</a></em>, 1995 Amsterdam: North-Holland, pp. 213–253, (<a href='http://hopf.math.purdue.edu/Elmendorf-Kriz-May/modern_foundations.pdf'>pdf</a>)</li>
 </ul>
@@ -1136,7 +1138,7 @@ margin-left: 0em;
 <li id='GreenleesMay95'><a class='existingWikiWord' href='/nlab/show/John+Greenlees'>John Greenlees</a>, <a class='existingWikiWord' href='/nlab/show/Peter+May'>Peter May</a>, <em>Equivariant stable homotopy theory</em>, in I.M. James (ed.), <em>Handbook of Algebraic Topology</em> , pp. 279-325. 1995. (<a href='http://www.math.uchicago.edu/~may/PAPERS/Newthird.pdf'>pdf</a>)</li>
 </ul>
 
-<p>The <math class='maruku-mathml' display='inline' id='mathml_eb2140096e91340283d46b55d4c726f974d5fbca_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-topos version is in section 6.5 of</p>
+<p>The <math class='maruku-mathml' display='inline' id='mathml_5de1a1361172b541f9c4043426a255575c868829_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-topos version is in section 6.5 of</p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Jacob+Lurie'>Jacob Lurie</a>, <a class='existingWikiWord' href='/nlab/show/Higher+Topos+Theory'>Higher Topos Theory</a></li>
@@ -1157,14 +1159,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April 29, 2016 04:47:26 
+  Revised on October 26, 2017 03:25:25 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (131.220.184.222)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Whitehead+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Whitehead+theorem/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/Whitehead+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Whitehead+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Whitehead+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Whitehead+theorem/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/Whitehead+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Whitehead+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
