--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,40 +308,18 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <blockquote>
-<p><code>{:data</code></p>
-</blockquote>
-
-<p>Hmm. I can’t find mention that Instiki actually parses that. Maybe <code>:data</code> is unknown and shows up in the error log.</p>
-
-<p>testing <code>{:data</code></p>
-
-<p></p>
-
-<p>after <code>:data</code> statement.</p>
-
-<p>testing <code>{:piffle</code> with internal <code>\}</code></p>
-
-<p></p>
-
-<p>after <code>:piffle</code> statement.</p>
-
-<p>testing <code>{:piffle</code> with unescaped internal <code>}</code></p>
-
-<p> baz }</p>
-
-<p>after <code>:piffle</code> statement.</p>
+    <p>…</p>
 </div>
 
 <div class="revisedby">
-  Revised on October 25, 2017 16:17:53 
-  by <a class="existingWikiWord" href="/nlab/show/Rod+McGuire">Rod Mc Guire</a>
-  (108.39.130.142)
+  Revised on October 26, 2017 08:36:00 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (195.37.234.86)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1178" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1178 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1179" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1179 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
