--- a/pages/626.html
+++ b/pages/626.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -325,7 +325,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/twist'>balanced monoidal category</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/balanced+monoidal+category'>balanced monoidal category</a></p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/twist'>twist</a></li>
@@ -978,7 +978,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>in monoidal categories which are <em><a class='existingWikiWord' href='/nlab/show/ribbon+category'>ribbon categories</a></em> the strings from above behave as if they have a small transversal extension which makes them behave as ribbons. Accordingly, there is a <em>twist</em> operation in the axioms of a ribbon category and graphically it corresponds to twisting the ribbons by 180 degrees.</p>
+<p>in monoidal categories which are <em><a class='existingWikiWord' href='/nlab/show/ribbon+category'>ribbon categories</a></em> the strings from above behave as if they have a small transversal extension which makes them behave as ribbons. Accordingly, there is a <em>twist</em> operation in the axioms of a ribbon category and graphically it corresponds to twisting the ribbons by 360 degrees.</p>
 </li>
 
 <li>
@@ -998,7 +998,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>there is also a string diagram calculus for <a class='existingWikiWord' href='/nlab/show/bicategory'>bicategories</a>, which extends that for monoidal categories regarded as one-object bicategories. Thus, the strings now represent 1-cells and the nodes 2-cells, leaving the two-dimensional planar regions cut out by the strings to represent the 0-cells. This makes it manifest that in general, string diagram notation is <em>Poincaré dual</em> to the <a class='existingWikiWord' href='/nlab/show/globe'>globular</a> notation: where one uses <math class='maruku-mathml' display='inline' id='mathml_36504769f01c79055a5660f4651f4fd334792fa8_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi></mrow><annotation encoding='application/x-tex'>d</annotation></semantics></math>-dimensional symbols, the other uses <math class='maruku-mathml' display='inline' id='mathml_36504769f01c79055a5660f4651f4fd334792fa8_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>2</mn><mo>−</mo><mi>d</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(2-d)</annotation></semantics></math>-dimensional symbols.</p>
+<p>there is also a string diagram calculus for <a class='existingWikiWord' href='/nlab/show/bicategory'>bicategories</a>, which extends that for monoidal categories regarded as one-object bicategories. Thus, the strings now represent 1-cells and the nodes 2-cells, leaving the two-dimensional planar regions cut out by the strings to represent the 0-cells. This makes it manifest that in general, string diagram notation is <em>Poincaré dual</em> to the <a class='existingWikiWord' href='/nlab/show/globe'>globular</a> notation: where one uses <math class='maruku-mathml' display='inline' id='mathml_741e0422bf8cbdefc3cc47589c0affc3ff216d95_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi></mrow><annotation encoding='application/x-tex'>d</annotation></semantics></math>-dimensional symbols, the other uses <math class='maruku-mathml' display='inline' id='mathml_741e0422bf8cbdefc3cc47589c0affc3ff216d95_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>2</mn><mo>−</mo><mi>d</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(2-d)</annotation></semantics></math>-dimensional symbols.</p>
 </li>
 
 <li>
@@ -1243,14 +1243,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on August 12, 2017 18:35:01 
-  by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
-  (76.167.222.204)
+  Revised on October 26, 2017 18:27:59 
+  by <span class="newWikiWord">Ying Hong Tham<a href="/nlab/new/Ying+Hong+Tham">?</a></span>
+  (129.49.88.82)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/string+diagram" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/string+diagram/36" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(36 revisions)</span> | <a href="/nlab/show/diff/string+diagram" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/string+diagram" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/string+diagram" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/string+diagram/37" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(37 revisions)</span> | <a href="/nlab/show/diff/string+diagram" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/string+diagram" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
